# openmimicry

./: .dockerignore  .editorconfig  .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  MILESTONE5_INTEGRATION.md  Makefile  Milestone.md  PATCH_NOTES.md  README.md  README_EMOTION_SPEAKING_PATCH.md  README_MILESTONE6.md  README_MILESTONE6_5.md  README_MILESTONE8.md  ROADMAP.md  SECURITY.md  docker-compose.yml  nul  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  USERPROFILE.wslconfig
.github/: PR_BODY_m10_live3d.md  PR_BODY_m11_unity.md  PR_BODY_m12_external.md  PR_BODY_m13_vision.md  PR_BODY_m13_vision_brief.md  PR_BODY_m1_llm.md  PR_BODY_m2_voice.md  PR_BODY_m3_avatar.md  PR_BODY_m4_sprite2d.md  PR_BODY_m5_tasks.md  PR_BODY_m6_backend.md  PR_BODY_m7_frontend.md  PR_BODY_m8_tauri.md  PR_BODY_m9_threejs.md  PR_BODY_phase0_m0.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  m0_core.md  m10_avatar_live3d.md  m11_avatar_unity.md  m12_avatar_external.md  m1_llm.md  m2_voice.md  m3_avatar_core.md  m4_avatar_sprite2d.md  m5_tasks.md  m6_backend.md  m7_frontend.md  m8_tauri.md  m9_avatar_threejs.md  m_phase0_contract_freeze.md  mx_tooling.md
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/: runtime.default.toml
apps/backend/: README.md  pyproject.toml
apps/backend/src/openmimicry_backend/: __init__.py  main.py  projection.py  wiring.py  ws.py
apps/backend/src/openmimicry_backend/routes/: __init__.py  admin.py  chat.py  health.py  mode.py  pack.py
apps/desktop/frontend/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  README.md  rustfmt.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  hotkeys.rs  lib.rs  main.rs  overlay.rs  state.rs  tray.rs
apps/desktop/src-tauri/tests/: test_hotkeys.rs  test_overlay.rs  test_state.rs  test_tray.rs
apps/external-echo/: README.md  package.json  tsconfig.json
apps/external-echo/src/: server.ts
apps/unity-bridge/: README.md
avatar/: __init__.py  animated_runtime_2d.py  animated_validation.py  avatar_config.py  avatar_pack.py  character_config.py  character_pack.py  director.py  event_mapper.py  pack_loader.py  response_schema.py  runtime_2d.py  state_model.py  validation.py
backend/: requirements.txt
backend/app/: config.py  director.py  llm_base.py  llm_mock.py  llm_ollama.py  main.py  main_voice_patch.py  main_voice_routes_patch.py  router.py  schemas.py  stt_base.py  stt_whisper_vad.py  tts_base.py  tts_noop.py  tts_pyttsx3.py  tts_router.py  voice_controller.py  voice_models.py  voice_state.py
backend/app/llm/: base.py  mock.py  ollama.py  router.py
backend/app/tts/: base.py  noop.py  piper_adapter.py  pyttsx3_adapter.py  router.py
backends/: __init__.py  base.py  mock_backend.py  ollama_backend.py  router.py  simple_json_backend.py
characters/mimic_blue/: character.toml  character.yml
characters/octomimic/: character.toml  character.yml
characters/octomimic_vrm/: README.md  pack.yaml
config/: personality.yml  runtime.yml  theme.yml
config/profiles/: vision.yaml
core/: __init__.py  backend_config.py  backend_types.py  config_loader.py  package_registry.py  profile_resolver.py  types.py  validation.py
docker/: Dockerfile.backend  Dockerfile.frontend-dev
docs/: adapters.md  architecture.md  avatar_modalities.md  character_packs.md  configuration.md  contracts.md  desktop_overlay.md  event_flows.md  external_runtimes.md  migration.md  parallel_execution.md  readme_guide.md  task_delegation.md  testing_and_ci.md  voice_modes.md  wslconfig.example
docs/modules/: M0_core.md  M13_vision.md  M1_llm.md  M2_voice.md  M3_avatar_core.md  M4_avatar_sprite2d.md  M5_tasks.md  M6_backend.md  M7_frontend.md  M8_tauri.md  M9_avatar_threejs.md  MX_tooling.md  M_phase0_contract_freeze.md  README.md  post_v0_2_modalities.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  browserVoice.ts  main.tsx  main_routes_patch.tsx  styles.css  styles_overlay_layers.css  windowApi.ts
frontend/src/pages/: OverlayApp.tsx  OverlayApp_full.tsx  OverlayApp_voice_patch.tsx  OverlayBackground.tsx  PanelApp.tsx
frontend/src/tts/: browserVoice.ts
frontend/src/voice/: VoiceControls.tsx  api.ts  types.ts  useVoiceControls.ts  voice.css
packs/: registry.json
packs/avatar_2d_alt/: avatar.toml
packs/avatar_2d_demo/: avatar.toml  manifest.json
packs/manifests/: avatar-2d.json  avatar-live2d.json  avatar-vrm.json  core-base.json  state-studio.json  voice-core.json
profiles/: basic.toml  extended.toml  full.toml  studio.toml
pytest-cache-files-0kirqr3m/v/cache/: lastfailed  nodeids
scripts/: backend_health.py  check_imports.py  cleanup-legacy.ps1  cleanup-legacy.sh  doctor.py  install_profile.py  m1_demo.py  m2_demo.py  m2_real.py  run.py  run_avatar_demo.py  run_character_demo.py  test_backend_switch.py  test_ollama_connection.py  validate_avatar.py  validate_character.py  validate_config.py  validate_pack.py
scripts/win/: README.md  backend.bat  cleanup-legacy.bat  desktop.bat  docker-up.bat  doctor.bat  frontend.bat  install.bat  test.bat
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: conftest.py
tests/contract/: conftest.py  test_avatar_runtime.py  test_llm.py  test_speech_controller.py  test_stt.py  test_task_runtime.py  test_tts.py  test_vision.py
tests/fixtures/configs/: integration.yaml  minimal.yaml
tests/integration/backend/: conftest.py  test_chat_flow.py  test_health.py  test_ptt_flow.py  test_task_flow.py  test_wake_flow.py  test_ws_projection.py
tests/unit/avatar/: test_director.py  test_mock_runtime.py  test_orchestrator.py  test_pack_loader.py  test_pack_validator.py
tests/unit/core/: test_bus.py  test_config_loader.py  test_imports.py  (+5 more)
tts/: __init__.py  base.py  pyttsx3_adapter.py
(+97 files in other folders)
